--- a/apps/docs/content/components/UnorderedList.mdx
+++ b/apps/docs/content/components/UnorderedList.mdx
@@ -8,7 +8,7 @@ description: Use the UnorderedList component to render a list of unordered items
 ---
 
 ```js
-import {UnorderedList, ListItem} from '@primer/react-brand'
+import {UnorderedList} from '@primer/react-brand'
 ```
 
 ## Examples
@@ -17,11 +17,15 @@ import {UnorderedList, ListItem} from '@primer/react-brand'
 
 ```jsx live
 <UnorderedList variant="default">
-  <ListItem>Automatic security and version updates</ListItem>
-  <ListItem>GitHub Security Advisories</ListItem>
-  <ListItem>Code and secret scanning</ListItem>
-  <ListItem>Dependency review</ListItem>
-  <ListItem>Automated authentication and identity management</ListItem>
+  <UnorderedList.Item>
+    Automatic security and version updates
+  </UnorderedList.Item>
+  <UnorderedList.Item>GitHub Security Advisories</UnorderedList.Item>
+  <UnorderedList.Item>Code and secret scanning</UnorderedList.Item>
+  <UnorderedList.Item>Dependency review</UnorderedList.Item>
+  <UnorderedList.Item>
+    Automated authentication and identity management
+  </UnorderedList.Item>
 </UnorderedList>
 ```
 
@@ -29,11 +33,15 @@ import {UnorderedList, ListItem} from '@primer/react-brand'
 
 ```jsx live
 <UnorderedList variant="checked">
-  <ListItem>Automatic security and version updates</ListItem>
-  <ListItem>GitHub Security Advisories</ListItem>
-  <ListItem>Code and secret scanning</ListItem>
-  <ListItem>Dependency review</ListItem>
-  <ListItem>Automated authentication and identity management</ListItem>
+  <UnorderedList.Item>
+    Automatic security and version updates
+  </UnorderedList.Item>
+  <UnorderedList.Item>GitHub Security Advisories</UnorderedList.Item>
+  <UnorderedList.Item>Code and secret scanning</UnorderedList.Item>
+  <UnorderedList.Item>Dependency review</UnorderedList.Item>
+  <UnorderedList.Item>
+    Automated authentication and identity management
+  </UnorderedList.Item>
 </UnorderedList>
 ```
 
@@ -47,7 +55,7 @@ import {UnorderedList, ListItem} from '@primer/react-brand'
 | `variant`   | `default`, `checked`                   | `default` | Specify alternative List appearance                        |
 | `children`  | `React.ReactNode`, `React.ReactNode[]` |           | Content to be displayed within the UnorderedList component |
 
-### ListItem
+### UnorderedList.Item
 
 | Name        | Type                                   |  Default  | Description                                              |
 | :---------- | :------------------------------------- | :-------: | :------------------------------------------------------- |
