More Changes from Review - Updated exports -  Updated CSS to avoid css selectors on elements - Updated nav to include new components

--- a/apps/docs/content/components/UnorderedList.mdx
+++ b/apps/docs/content/components/UnorderedList.mdx
@@ -1,5 +1,5 @@
 ---
-title: Unordered List
+title: UnorderedList
 status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/branch/NzBMPIfPrFU9I87d3k7KVq/Primer-Brand?node-id=4045%3A17093&t=XJ9W58VgtbVo74gb-0'
 source: https://github.com/primer/brand/tree/main/src/List/UnorderedList/UnorderedList.tsx
@@ -16,7 +16,7 @@ import {UnorderedList} from '@primer/react-brand'
 ### Default
 
 ```jsx live
-<UnorderedList variant="default">
+<UnorderedList>
   <UnorderedList.Item>
     Automatic security and version updates
   </UnorderedList.Item>
