--- a/apps/docs/content/components/OrderedList.mdx
+++ b/apps/docs/content/components/OrderedList.mdx
@@ -1,5 +1,5 @@
 ---
-title: Ordered List
+title: OrderedList
 status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/branch/NzBMPIfPrFU9I87d3k7KVq/Primer-Brand?node-id=4045%3A17560&t=W8B9ArDngbzJCC2m-0'
 source: https://github.com/primer/brand/tree/main/src/List/OrderedList/OrderedList.tsx
@@ -13,7 +13,7 @@ import {OrderedList} from '@primer/react-brand'
 
 ## Examples
 
-### OrderedList
+### Default
 
 ```jsx live
 <OrderedList>
