--- a/apps/docs/content/components/Heading.mdx
+++ b/apps/docs/content/components/Heading.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=354%3A8982'
 source: https://github.com/primer/brand/tree/main/src/Heading/Heading.tsx
 storybook: '/brand/storybook/?path=/story/components-heading--default'
-description: Use the Heading component to render body content
+description: Use the Heading component to title or subtitle text
 ---
 
 import {HeadingTags, HeadingSizes, defaultHeadingTag} from '@primer/react-brand'
