--- a/apps/docs/content/components/Heading.mdx
+++ b/apps/docs/content/components/Heading.mdx
@@ -7,7 +7,12 @@ storybook: '/brand/storybook/?path=/story/components-heading--default'
 description: Use the Heading component to render title or subtitle text
 ---
 
-import {HeadingTags, HeadingSizes, defaultHeadingTag} from '@primer/react-brand'
+import {
+  HeadingTags,
+  HeadingSizes,
+  HeadingWeights,
+  defaultHeadingTag,
+} from '@primer/react-brand'
 import {Box as Container} from '@primer/react'
 import {PropTableValues} from '../../src/components'
 
@@ -54,14 +59,60 @@ Occasionally, you may need to apply a different visual size to override the defa
 </Heading>
 ```
 
+### Weight
+
+The recommended text weight is automatically applied to Headings based on their position on the type scale.
+Use the `weight` prop to adjust the default visual appearance if required.
+
+```jsx live
+<>
+  <Heading as="h3" weight="heavy">
+    heavy
+  </Heading>
+  <Heading as="h3" weight="extrabold">
+    extrabold
+  </Heading>
+  <Heading as="h3" weight="bold">
+    bold
+  </Heading>
+  <Heading as="h3" weight="semibold">
+    semibold
+  </Heading>
+  <Heading as="h3" weight="medium">
+    medium
+  </Heading>
+  <Heading as="h3" weight="normal">
+    normal
+  </Heading>
+  <Heading as="h3" weight="light">
+    light
+  </Heading>
+
+  {/* Responsive */}
+  <br />
+  <br />
+  <Heading
+    as="h4"
+    weight={{
+      narrow: 'heavy',
+      regular: 'semibold',
+      wide: 'light',
+    }}
+  >
+    Responsive
+  </Heading>
+</>
+```
+
 ## Component props
 
 ### Heading
 
-| Name        | Type                                                    |                     Default                      | Description                              |
-| :---------- | :------------------------------------------------------ | :----------------------------------------------: | :--------------------------------------- |
-| `as`        | <PropTableValues values={HeadingTags} addLineBreaks />  | <PropTableValues values={[defaultHeadingTag]} /> | Applies the underlying HTML element      |
-| `className` | `string`                                                |                                                  | Sets a custom class on the root element  |
-| `id`        | `string`                                                |                                                  | Sets a custom id                         |
-| `ref`       | `React.RefObject`                                       |                                                  | Forward a Ref to the underlying DOM node |
-| `size`      | <PropTableValues values={HeadingSizes} addLineBreaks /> |                                                  | Override the default visual text size    |
+| Name        | Type                                                                                  |                     Default                      | Description                              |
+| :---------- | :------------------------------------------------------------------------------------ | :----------------------------------------------: | :--------------------------------------- |
+| `as`        | <PropTableValues values={HeadingTags} addLineBreaks />                                | <PropTableValues values={[defaultHeadingTag]} /> | Applies the underlying HTML element      |
+| `className` | `string`                                                                              |                                                  | Sets a custom class on the root element  |
+| `id`        | `string`                                                                              |                                                  | Sets a custom id                         |
+| `ref`       | `React.RefObject`                                                                     |                                                  | Forward a Ref to the underlying DOM node |
+| `size`      | <PropTableValues values={HeadingSizes} addLineBreaks />                               |                                                  | Override the default visual text size    |
+| `weight`    | <PropTableValues values={[...HeadingWeights, 'ResponsiveWeightMap']} addLineBreaks /> |                                                  | Override the default visual text weight  |
