Fix typo in docs
Co-authored-by: Rez <rezrah@github.com>

--- a/apps/docs/content/components/SectionIntro.mdx
+++ b/apps/docs/content/components/SectionIntro.mdx
@@ -77,7 +77,7 @@ Required node that is used to provide a heading for the section.
 | `className` | `string`                   |             | `false`  | Custom class name for the heading component           |
 | `children`  | `ReactNode`, `ReactNode[]` | `undefined` | `true`   | Content to be displayed inside the heading component. |
 
-Fowrards all props from the [Heading component](/components/Heading), including `as`, `size`, and `weight`.
+Forwards all props from the [Heading component](/components/Heading), including `as`, `size`, and `weight`.
 
 ### SectionIntro.Description
 
