--- a/apps/docs/content/components/SectionIntro.mdx
+++ b/apps/docs/content/components/SectionIntro.mdx
@@ -1,6 +1,7 @@
 ---
 title: SectionIntro
 status: Experimental
+figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=3891%3A17104&t=j6zvLXblgsO36Wmu-11'
 source: https://github.com/primer/brand/tree/main/packages/react/src/SectionIntro/SectionIntro.tsx
 storybook: '/brand/storybook/?path=/story/components-SectionIntro--playground'
 description: Use SectionIntro to provide a title, optional description and link to a new section in the page.
