--- a/apps/docs/content/components/Stack.mdx
+++ b/apps/docs/content/components/Stack.mdx
@@ -2,7 +2,7 @@
 title: Stack
 status: Experimental
 source: https://github.com/primer/brand/tree/main/src/Text/Text.tsx
-storybook: '/brand/storybook/?path=/story/components-stack--playground'
+storybook: https://github.com/primer/brand/blob/main/packages/react/src/Stack/Stack.tsx
 description: Stack enables layout of its immediate children along the vertical or horizontal axis
 ---
 
