--- a/apps/docs/content/components/AnchorNav.mdx
+++ b/apps/docs/content/components/AnchorNav.mdx
@@ -1,8 +1,8 @@
 ---
 title: AnchorNav
 status: Experimental
-figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=3359%3A30494&t=7vT79cAF1kbiMd2j-4'
-source: https://github.com/primer/brand/tree/main/src/AnchorNav/AnchorNav.tsx
+figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=3359%3A30494&t=7vT79cAF1kbiMd2j-4
+source: https://github.com/primer/brand/blob/main/packages/react/src/AnchorNav/AnchorNav.tsx
 storybook: '/brand/storybook/?path=/story/components-anchornav--playground'
 description: Use AnchorNav for prompt navigation to different sections of a page.
 ---
