--- a/apps/docs/content/components/ComparisonTable.mdx
+++ b/apps/docs/content/components/ComparisonTable.mdx
@@ -1,8 +1,8 @@
 ---
 title: ComparisonTable
 status: Experimental
-figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=375%3A8130'
-source: https://github.com/primer/brand/tree/main/src/ComparisonTable/ComparisonTable.tsx
+figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=375%3A8130
+source: https://github.com/primer/brand/blob/main/packages/react/src/ComparisonTable/ComparisonTable.tsx
 storybook: '/brand/storybook/?path=/story/components-comparisontable--playground'
 description: Use ComparisonTable to compare two products or features in a table format
 ---
