--- a/apps/docs/content/components/FAQ.mdx
+++ b/apps/docs/content/components/FAQ.mdx
@@ -1,8 +1,8 @@
 ---
 title: FAQ
 status: Experimental
-figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=375%3A8130'
-source: https://github.com/primer/brand/tree/main/src/FAQ/FAQ.tsx
+figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=375%3A8130
+source: https://github.com/primer/brand/blob/main/packages/react/src/FAQ/FAQ.tsx
 storybook: '/brand/storybook/?path=/story/components-faq--default'
 description: Display content in a Q&A format
 ---
