--- a/apps/docs/content/components/SubdomainNavBar.mdx
+++ b/apps/docs/content/components/SubdomainNavBar.mdx
@@ -1,8 +1,8 @@
 ---
 title: SubdomainNavBar
 status: Experimental
-figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1024%3A32796'
-source: https://github.com/primer/brand/tree/main/src/SubdomainNavBar/SubdomainNavBar.tsx
+figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1024%3A32796
+source: https://github.com/primer/brand/blob/main/packages/react/src/SubdomainNavBar/SubdomainNavBar.tsx
 storybook: '/brand/storybook/?path=/story/components-subdomainnavbar--default'
 description: Top level navigation for subdomain sites.
 ---
