Update doc examples

--- a/apps/docs/content/components/Avatar.mdx
+++ b/apps/docs/content/components/Avatar.mdx
@@ -35,22 +35,22 @@ The size of the avatar can be controlled by the `size` prop.
 >
   <Avatar
     size={32}
-    src="https://i.pravatar.cc/160?u=80"
+    src="https://i.pravatar.cc/64?u=80"
     alt="A random avatar picture at 32px"
   />
   <Avatar
     size={40}
-    src="https://i.pravatar.cc/160?u=80"
+    src="https://i.pravatar.cc/80?u=80"
     alt="A random avatar picture at 40px"
   />
   <Avatar
     size={48}
-    src="https://i.pravatar.cc/160?u=80"
+    src="https://i.pravatar.cc/96?u=80"
     alt="A random avatar picture at 48px"
   />
   <Avatar
     size={64}
-    src="https://i.pravatar.cc/160?u=80"
+    src="https://i.pravatar.cc/128?u=80"
     alt="A random avatar picture at 64px"
   />
   <Avatar
@@ -76,14 +76,14 @@ The shape of the avatar can be controlled by the `shape` prop.
   <Avatar
     size={64}
     shape="circle"
-    src="https://i.pravatar.cc/160?u=80"
-    alt="A random avatar picture at 64px"
+    src="https://i.pravatar.cc/128?u=80"
+    alt="A circular avatar picture"
   />
   <Avatar
     size={64}
     shape="square"
-    src="https://i.pravatar.cc/160?u=80"
-    alt="A random avatar picture at 64px"
+    src="https://i.pravatar.cc/128?u=80"
+    alt="A square avatar picture"
   />
 </Stack>
 ```
