--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -7,7 +7,13 @@ storybook: '/brand/storybook/?path=/story/components-CTAForm--playground'
 description: Use CTAForm to create a form that is used to collect minimal information from users.
 ---
 
-import {CTAForm, InlineLink} from '@primer/react-brand'
+import {
+  CTAForm,
+  InlineLink,
+  FormControl,
+  TextInput,
+  Checkbox,
+} from '@primer/react-brand'
 
 ```js
 import {CTAForm} from '@primer/react-brand'
@@ -18,29 +24,98 @@ import {CTAForm} from '@primer/react-brand'
 ### Default
 
 ```jsx live
-<CTAForm
-  buttonLabel="Subscribe"
-  checkboxLabel={
-    <>
-      I agree to the{' '}
-      <InlineLink href="www.github.com">terms and conditions</InlineLink> and{' '}
-      <InlineLink href="www.github.com">privacy policy</InlineLink>
-    </>
-  }
-  inputLabel="Your work email address"
-  inputType="email"
-  placeholder="me@github.com"
-/>
+<CTAForm>
+  <CTAForm.Input>
+    <FormControl required size="large" fullWidth>
+      <FormControl.Label>Your Work Email Address</FormControl.Label>
+      <TextInput placeholder="name" />
+    </FormControl>
+  </CTAForm.Input>
+  <CTAForm.Confirm>
+    <FormControl required size="large" fullWidth>
+      <FormControl.Label>
+        I agree to the <InlineLink href="#">Privacy Policy</InlineLink> and{' '}
+        <InlineLink href="#">Terms of Service</InlineLink>
+      </FormControl.Label>
+      <Checkbox name="confirm" />
+    </FormControl>
+  </CTAForm.Confirm>
+  <CTAForm.Action>Subscribe</CTAForm.Action>
+</CTAForm>
 ```
 
 ## Component props
 
 ### CTAForm
 
-| name            | type                                                                                            | default     | required | description                                  |
-| --------------- | ----------------------------------------------------------------------------------------------- | ----------- | -------- | -------------------------------------------- |
-| `inputLabel`    | `string`                                                                                        | `undefined` | `true`   | The label used by the input component        |
-| `inputType`     | `number`, `text`, `email`, `password`, `search`, `tel`, `url`, `date`, `time`, `datetime-local` | `email`     | `false`  | The type of text input that is created       |
-| `placeholder`   | `string`                                                                                        | `undefined` | `false`  | The placeholder text for the input component |
-| `buttonLabel`   | `string`                                                                                        | `undefined` | `true`   | The label used by the button component       |
-| `checkboxLabel` | `string`                                                                                        | `undefined` | `true`   | The label used by the checkbox component     |
+| name        | type     | default     | required | description                                                        |
+| ----------- | -------- | ----------- | -------- | ------------------------------------------------------------------ |
+| `action`    | `string` | `undefined` | `false`  | The URL that processes the form submission                         |
+| `method`    | `string` | `undefined` | `false`  | The HTTP method to submit the form with                            |
+| `target`    | `string` | `undefined` | `false`  | Indicates where to display the response after submitting the form. |
+| `className` | `string` | `undefined` | `false`  | Sets a custom class                                                |
+
+```jsx live
+<CTAForm>
+  <CTAForm.Input>
+    <FormControl required size="large" fullWidth>
+      <FormControl.Label>Your Work Email Address</FormControl.Label>
+      <TextInput placeholder="name" />
+    </FormControl>
+  </CTAForm.Input>
+  <CTAForm.Action>Subscribe</CTAForm.Action>
+</CTAForm>
+```
+
+### CTAForm.Input
+
+| name        | type     | default     | required | description         |
+| ----------- | -------- | ----------- | -------- | ------------------- |
+| `className` | `string` | `undefined` | `false`  | Sets a custom class |
+
+```jsx live
+<CTAForm>
+  <CTAForm.Input>
+    <FormControl required size="large" fullWidth>
+      <FormControl.Label>Your Work Email Address</FormControl.Label>
+      <TextInput placeholder="name" />
+    </FormControl>
+  </CTAForm.Input>
+  <CTAForm.Confirm>
+    <FormControl required size="large" fullWidth>
+      <FormControl.Label>
+        I agree to the <InlineLink href="#">Privacy Policy</InlineLink> and{' '}
+        <InlineLink href="#">Terms of Service</InlineLink>
+      </FormControl.Label>
+      <Checkbox name="confirm" />
+    </FormControl>
+  </CTAForm.Confirm>
+  <CTAForm.Action>Subscribe</CTAForm.Action>
+</CTAForm>
+```
+
+### CTAForm.Confirm
+
+| name        | type     | default     | required | description         |
+| ----------- | -------- | ----------- | -------- | ------------------- |
+| `className` | `string` | `undefined` | `false`  | Sets a custom class |
+
+```jsx live
+<CTAForm>
+  <CTAForm.Input>
+    <FormControl required size="large" fullWidth>
+      <FormControl.Label>Your Work Email Address</FormControl.Label>
+      <TextInput placeholder="name" />
+    </FormControl>
+  </CTAForm.Input>
+  <CTAForm.Action>Subscribe</CTAForm.Action>
+</CTAForm>
+```
+
+### CTAForm.Action
+
+| name        | type     | default     | required | description         |
+| ----------- | -------- | ----------- | -------- | ------------------- |
+| `className` | `string` | `undefined` | `false`  | Sets a custom class |
+
+{/* TODO: Add all button properties here */}
