--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -27,19 +27,32 @@ import {CTAForm} from '@primer/react-brand'
 <CTAForm>
   <CTAForm.Input>
     <FormControl required size="large" fullWidth>
-      <FormControl.Label>Your Work Email Address</FormControl.Label>
+      <FormControl.Label>Your work email address</FormControl.Label>
       <TextInput placeholder="name" />
     </FormControl>
   </CTAForm.Input>
   <CTAForm.Confirm>
     <FormControl required size="large" fullWidth>
       <FormControl.Label>
-        I agree to the <InlineLink href="#">Privacy Policy</InlineLink> and{' '}
-        <InlineLink href="#">Terms of Service</InlineLink>
+        I agree to the Privacy Policy and Terms of Service
       </FormControl.Label>
       <Checkbox name="confirm" />
     </FormControl>
   </CTAForm.Confirm>
+  <CTAForm.Action>Subscribe</CTAForm.Action>
+</CTAForm>
+```
+
+### Component without confirm block
+
+```jsx live
+<CTAForm>
+  <CTAForm.Input>
+    <FormControl required size="large" fullWidth>
+      <FormControl.Label>Your work email address</FormControl.Label>
+      <TextInput placeholder="name" />
+    </FormControl>
+  </CTAForm.Input>
   <CTAForm.Action>Subscribe</CTAForm.Action>
 </CTAForm>
 ```
@@ -55,44 +68,11 @@ import {CTAForm} from '@primer/react-brand'
 | `target`    | `string` | `undefined` | `false`  | Indicates where to display the response after submitting the form. |
 | `className` | `string` | `undefined` | `false`  | Sets a custom class                                                |
 
-```jsx live
-<CTAForm>
-  <CTAForm.Input>
-    <FormControl required size="large" fullWidth>
-      <FormControl.Label>Your Work Email Address</FormControl.Label>
-      <TextInput placeholder="name" />
-    </FormControl>
-  </CTAForm.Input>
-  <CTAForm.Action>Subscribe</CTAForm.Action>
-</CTAForm>
-```
-
 ### CTAForm.Input
 
 | name        | type     | default     | required | description         |
 | ----------- | -------- | ----------- | -------- | ------------------- |
 | `className` | `string` | `undefined` | `false`  | Sets a custom class |
-
-```jsx live
-<CTAForm>
-  <CTAForm.Input>
-    <FormControl required size="large" fullWidth>
-      <FormControl.Label>Your Work Email Address</FormControl.Label>
-      <TextInput placeholder="name" />
-    </FormControl>
-  </CTAForm.Input>
-  <CTAForm.Confirm>
-    <FormControl required size="large" fullWidth>
-      <FormControl.Label>
-        I agree to the <InlineLink href="#">Privacy Policy</InlineLink> and{' '}
-        <InlineLink href="#">Terms of Service</InlineLink>
-      </FormControl.Label>
-      <Checkbox name="confirm" />
-    </FormControl>
-  </CTAForm.Confirm>
-  <CTAForm.Action>Subscribe</CTAForm.Action>
-</CTAForm>
-```
 
 ### CTAForm.Confirm
 
@@ -100,22 +80,10 @@ import {CTAForm} from '@primer/react-brand'
 | ----------- | -------- | ----------- | -------- | ------------------- |
 | `className` | `string` | `undefined` | `false`  | Sets a custom class |
 
-```jsx live
-<CTAForm>
-  <CTAForm.Input>
-    <FormControl required size="large" fullWidth>
-      <FormControl.Label>Your Work Email Address</FormControl.Label>
-      <TextInput placeholder="name" />
-    </FormControl>
-  </CTAForm.Input>
-  <CTAForm.Action>Subscribe</CTAForm.Action>
-</CTAForm>
-```
-
 ### CTAForm.Action
 
 | name        | type     | default     | required | description         |
 | ----------- | -------- | ----------- | -------- | ------------------- |
 | `className` | `string` | `undefined` | `false`  | Sets a custom class |
 
-{/* TODO: Add all button properties here */}
+<!-- TODO: Add all button properties here -->
