Minor Updates - Fixed text capitalization in changeset - Updated CTAForm docs to include info about form props

--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -68,6 +68,8 @@ import {CTAForm} from '@primer/react-brand'
 | `target`    | `string` | `undefined` | `false`  | Indicates where to display the response after submitting the form. |
 | `className` | `string` | `undefined` | `false`  | Sets a custom class                                                |
 
+Additional props can be passed to the `<form>` element. [See MDN for a list of props](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/form) accepted by the `<form>` element.
+
 ### CTAForm.Input
 
 | name        | type     | default     | required | description         |
