--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -57,6 +57,31 @@ import {CTAForm} from '@primer/react-brand'
 </CTAForm>
 ```
 
+### Using onChange & onSubmit handlers
+
+```jsx live
+const WithOnChangeHandlers = () => {
+  const onChange = (e) => {
+    alert('onChange event triggered')
+  }
+  const onSubmit = (e) => {
+    alert('onSubmit event triggered')
+  }
+  return (
+    <CTAForm onSubmit={onSubmit}>
+      <CTAForm.Input onChange={onChange}>
+        <FormControl required size="large" fullWidth>
+          <FormControl.Label>Your work email address</FormControl.Label>
+          <TextInput placeholder="name" />
+        </FormControl>
+      </CTAForm.Input>
+      <CTAForm.Action>Subscribe</CTAForm.Action>
+    </CTAForm>
+  )
+}
+render(<WithOnChangeHandlers />)
+```
+
 ## Component props
 
 ### CTAForm
