--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -26,13 +26,13 @@ import {CTAForm} from '@primer/react-brand'
 ```jsx live
 <CTAForm>
   <CTAForm.Input>
-    <FormControl required size="large" fullWidth>
+    <FormControl required>
       <FormControl.Label>Your work email address</FormControl.Label>
       <TextInput placeholder="name" />
     </FormControl>
   </CTAForm.Input>
   <CTAForm.Confirm>
-    <FormControl required size="large" fullWidth>
+    <FormControl required>
       <FormControl.Label>
         I agree to the Privacy Policy and Terms of Service
       </FormControl.Label>
@@ -48,7 +48,7 @@ import {CTAForm} from '@primer/react-brand'
 ```jsx live
 <CTAForm>
   <CTAForm.Input>
-    <FormControl required size="large" fullWidth>
+    <FormControl required>
       <FormControl.Label>Your work email address</FormControl.Label>
       <TextInput placeholder="name" />
     </FormControl>
@@ -70,7 +70,7 @@ const WithOnChangeHandlers = () => {
   return (
     <CTAForm onSubmit={onSubmit}>
       <CTAForm.Input onChange={onChange}>
-        <FormControl required size="large" fullWidth>
+        <FormControl required>
           <FormControl.Label>Your work email address</FormControl.Label>
           <TextInput placeholder="name" />
         </FormControl>
