use font-stretch and fix docs

--- a/apps/docs/content/components/Heading.mdx
+++ b/apps/docs/content/components/Heading.mdx
@@ -121,8 +121,8 @@ Use the `width` prop to override the default visual appearance if required.
   <Heading as="h3" width="normal">
     normal
   </Heading>
-  <Heading as="h3" width="wide">
-    wide
+  <Heading as="h3" width="expanded">
+    expanded
   </Heading>
 
   {/* Responsive */}
@@ -133,7 +133,7 @@ Use the `width` prop to override the default visual appearance if required.
     width={{
       narrow: 'condensed',
       regular: 'normal',
-      wide: 'wide',
+      wide: 'expanded',
     }}
   >
     Responsive
