Updated Checkbox Label To Use Text Component

--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -13,6 +13,7 @@ import {
   FormControl,
   TextInput,
   Checkbox,
+  Text,
 } from '@primer/react-brand'
 
 ```js
@@ -34,7 +35,11 @@ import {CTAForm} from '@primer/react-brand'
   <CTAForm.Confirm>
     <FormControl required>
       <FormControl.Label>
-        I agree to the Privacy Policy and Terms of Service
+        <Text>
+          I agree to the{' '}
+          <InlineLink href="www.github.com">Privacy Policy</InlineLink> and{' '}
+          <InlineLink href="www.github.com">Terms of Service</InlineLink>
+        </Text>
       </FormControl.Label>
       <Checkbox name="confirm" />
     </FormControl>
