--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -65,26 +65,15 @@ import {CTAForm} from '@primer/react-brand'
 ### Using onChange & onSubmit handlers
 
 ```jsx live
-const WithOnChangeHandlers = () => {
-  const onChange = (e) => {
-    alert('onChange event triggered')
-  }
-  const onSubmit = (e) => {
-    alert('onSubmit event triggered')
-  }
-  return (
-    <CTAForm onSubmit={onSubmit}>
-      <CTAForm.Input onChange={onChange}>
-        <FormControl required>
-          <FormControl.Label>Your work email address</FormControl.Label>
-          <TextInput placeholder="name" />
-        </FormControl>
-      </CTAForm.Input>
-      <CTAForm.Action>Subscribe</CTAForm.Action>
-    </CTAForm>
-  )
-}
-render(<WithOnChangeHandlers />)
+<CTAForm onSubmit={() => alert('onSubmit event triggered')}>
+  <CTAForm.Input onChange={() => alert('onChange event triggered')}>
+    <FormControl required>
+      <FormControl.Label>Your work email address</FormControl.Label>
+      <TextInput placeholder="name" />
+    </FormControl>
+  </CTAForm.Input>
+  <CTAForm.Action>Subscribe</CTAForm.Action>
+</CTAForm>
 ```
 
 ## Component props
